# test-memes

./: .env.dev  .env.local  .env.postgres.dev  .env.s3  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  load_data.py  pyproject.toml  test_data.json
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0db746676b54_init.py  79172facddbc_init.py
app/: dependency.py  settings.py
app/infrastructure/database/: accessor.py
app/posts/: Dockerfile  extension.py  handlers.py  main.py  models.py  openapi.json  post_settings.py  posts_dependency.py  schema.py  service.py
app/posts/infrastructure/database/: __init__.py  accessor.py  database.py
app/posts/repository/: __init__.py  post.py
app/s3/: Dockerfile  handlers.py  main.py  pyproject.toml  repository.py  s3_dependency.py  s3_settings.py  service.py
app/s3/infrastructure/: __init__.py
app/s3/infrastructure/s3/: accessor.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  api.js  index.css
frontend/src/components/: Footer.js  Header.js  PostCard.js
frontend/src/pages/: CreatePostPage.js  HomePage.js  PostDetailPage.js  PostEditPage.js
nginx/dev/: nginx.conf
tests/: conftest.py  pyproject.toml
tests/fixtures/: settings.py
tests/fixtures/posts/: posts_model.py  posts_repository.py  posts_service.py
tests/fixtures/s3/: s3_repository.py
tests/unit/posts/: test_posts_service.py
