[tool.poetry]
name = "test-memes"
version = "0.1.0"
description = "Ahaha"
authors = ["nesterov-art <nesterov-art@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
minio = "^7.2.7"
aio-pika = "^9.4.2"
httpx = "^0.27.0"
aiobotocore = "^2.13.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
