[tool.poetry]
name = "test-memes"
version = "0.1.0"
description = "Ahaha"
authors = ["nesterov-art <nesterov-art@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
minio = "^7.2.7"
aio-pika = "^9.4.2"
httpx = "^0.27.0"
aiobotocore = "^2.13.1"
requests = "^2.32.3"
pytest = "^8.3.2"
twisted = "^24.3.0"
pytest-twisted = "^1.14.2"
greenlet = "^3.0.3"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
faker = "^26.0.0"
pytest-factoryboy = "^2.7.0"
flake8 = "^7.1.0"
swagger-markdown = "^0.9.16"
openapi-generator-cli = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
