[tool.poetry]
name = "test-memes"
version = "0.1.0"
description = "Ahaha"
authors = ["nesterov-art <nesterov-art@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
twisted = "^24.3.0"
pytest-twisted = "^1.14.2"
greenlet = "^3.0.3"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
faker = "^26.0.0"
pytest-factoryboy = "^2.7.0"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
